# skump

./: Cargo.toml
src/: app.rs  db.rs  exit.rs  list.rs  main.rs
src/export/: cli.rs  html.rs  mod.rs  pdf.rs
src/templates/: mod.rs
src/templates/src/: chat.html
src/templates/src/assets/css/: stylesheet.css
