[package]
name = "skump"
version = "0.1.0"
authors = ["Erik Moldtmann <erik@moldtmann.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rusqlite = "0.24.0"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.6.0"
wkhtmltopdf = "0.3.0"
handlebars = "3.5.3"